# oshmri

./: README.md  specs.md
data/.ipynb_checkpoints/: PlayingWithData-checkpoint.ipynb
hardware/: PMODs.drawio  Readme.md  specs.ods
hardware/0.Kilsyth/: Kilsyth_AFE.drawio.xml  Readme.md
hardware/0.Kilsyth/20230324/: 20230314.ipynb
hardware/0.Kilsyth/20230325/: Readme.md  debug.bit  loop.bit
hardware/0.Kilsyth/20230330/: ftd3xx  loop.bit
hardware/0.Kilsyth/20230406/: 20230406.ipynb  2ping.bit  ping.bit
hardware/0.Kilsyth/20230429/: 20230406.ipynb  3rdparty  Readme.md  endOfApril.bit
hardware/0.Kilsyth/20230528/: Readme.md
hardware/0.Kilsyth/20230528b/: hardware.bit  test.ipynb
hardware/0.Kilsyth/blinky/: .sconsign.dblite  hardware.bit  hardware.config  hardware.json
hardware/0.Kilsyth/usb_tests/: 20230313.ipynb  20230314.ipynb  Readme.md
hardware/12.FastDAC/PICO_DAC2932(20240514)/: DAC2932.csv  PICO_DAC2932.kicad_pcb  PICO_DAC2932.kicad_prl  PICO_DAC2932.kicad_pro  (+1 more)
hardware/3.PMOD-Pulser_update/: Readme.md
hardware/4.PMOD_MSI/: 5.MSI.md
hardware/5.PICO_ADC_Test/: design.md  memory_use.ods  pico_adc_mems_test_transfers.ods
hardware/6.PicoDemod/: Readme.md
hardware/6.PicoDemod/firmware/adc-pico_Main/: CMakeLists.txt  main.c
hardware/6.PicoDemod/firmware/adc-pico_Main/adc/: adc.c  adc.h  adc.pio
hardware/7.R2RDAC/: store_images_ram.ods
hardware/PICO/: Feasa.md  pico_mb.md
hardware/support/: AD9833.md  SI5351.md
time_data/: 200917175808 - Raw data.txt  20210318-Time?.ipynb
tom/: .gitignore
tom/Scope/: recon.ipynb  recon.py
(+735 files in other folders)
